--- a/exploratory.Rmd
+++ b/exploratory.Rmd
@@ -22,7 +22,9 @@ covid.states <- read_csv(url(state.url))
 ### Looking at some stats
 
 ```{r}
-ggplot(co.counties, aes(x = date, y = cases)) +
+covid.counties.co <- covid.counties %>%
+  filter(state == "Colorado")
+ggplot(covid.counties.co, aes(x = date, y = cases)) +
   geom_point(aes(color = county)) +
   theme_bw()
 ```
@@ -30,7 +32,7 @@ ggplot(co.counties, aes(x = date, y = cases)) +
 
 
 ```{r, echo = F}
-co.counties.death <- co.counties %>%
+co.counties.death <- covid.counties.co %>%
   filter(deaths > 0)
 ggplot(co.counties.death, aes(x = date, y = deaths)) +
   geom_point(position = position_jitter(w=0.1, h = 0.1),
